--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Setup Git Configuration
         run: |
-          git config user.email "anfaucet@gmail.com"
-          git config user.name "anfaucet"
+          git config user.email "aenteixst@gmail.com"
+          git config user.name "aeteixst"
 
       - name: Prepare Commit
         run: |
